--- a/NLP_Study/Week_2/new_skipgram/test.ipynb
+++ b/NLP_Study/Week_2/new_skipgram/test.ipynb
@@ -147,6 +147,51 @@
     "print(\"🧠 max(word2Ind):\", max(word2Ind.values()))\n",
     "print(\"🧠 len(outsideVectors):\", outsideVectors.shape[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "166a78ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Dataset path: utils/datasets/RTE\n",
+      "✅ Data file exists: utils/datasets/RTE/test.tsv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "from utils.treebank import RTE_dataset\n",
+    "import matplotlib\n",
+    "matplotlib.use('agg')\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "import operator\n",
+    "from word2vec import *\n",
+    "from sgd import *\n",
+    "\n",
+    "# Check Python Version\n",
+    "import sys\n",
+    "assert sys.version_info[0] == 3\n",
+    "assert sys.version_info[1] >= 5\n",
+    "\n",
+    "# Reset the random seed to make sure that everyone gets the same results\n",
+    "random.seed(314)\n",
+    "dataset = RTE_dataset()\n",
+    "import os\n",
+    "\n",
+    "print(\"📂 Dataset path:\", dataset.path)\n",
+    "data_file = os.path.join(dataset.path, \"test.tsv\")\n",
+    "if os.path.exists(data_file):\n",
+    "    print(f\"✅ Data file exists: {data_file}\")\n",
+    "else:\n",
+    "    print(f\"❌ Data file missing: {data_file}\")\n"
+   ]
   }
  ],
  "metadata": {
